@@ -3,15 +3,12 @@ AUX apache-2.2.11-r2-prefix.patch 20368 RMD160 0f3b1cb9acd22e210d2096134242641a6
 AUX apache-2.2.12-prefix.patch 20368 RMD160 0f3b1cb9acd22e210d2096134242641a62925517 SHA1 9c23f221f01bbc8138f943ec44f6ff16db6e57d7 SHA256 c2ab16839e18de46300ec29168fe97e4631884052e96c95b75b783f5f825e284
 AUX apache-2.2.9-r1-prefix.patch 20425 RMD160 079e0a94e9fa56c3ae8c94b4fbca52eea4ba5c4f SHA1 ed3c5b58775293ffecde89aafa83cff5e77ef6b7 SHA256 ff6efc8c6939090bcc1626ef5a202a187c27898c80a8ab97b715deb03937fbec
 DIST gentoo-apache-2.2.11-r2-20090707.tar.bz2 64636 RMD160 07435d8c47288c036d721cf9af49a541d7e33313 SHA1 7472ca661bf1a25ad7f534f2b9331459b7286d04 SHA256 e12ef2f887fa962bbb10da16cae682b2738a9299b06c0eb21d299e25b228d182
-DIST gentoo-apache-2.2.11-r3-20090724.tar.bz2 70256 RMD160 b977f5bf5c448ffa4abc4791da627e1ab6deb6a7 SHA1 984484c2616b5b8c059ddebd73bb5e7136e82287 SHA256 f74d999b8adea6395c1202e10d1412f7aed2f552cf94ce523eb7eb0dc50c2cbe
-DIST gentoo-apache-2.2.12-20090729.tar.bz2 64057 RMD160 b5b3da34571053598c813e87c825d29967394e53 SHA1 f32c29d69888aa64b6460058ef6495f23ca5fbe2 SHA256 c966648a23bdabb6a4608348dfbd6ab4056d0fa1ef71f543d20794e288260520
 DIST gentoo-apache-2.2.13-20090826.tar.bz2 64063 RMD160 38a00f52ff7798b535afe41a069f02670ccb83e3 SHA1 298e21c8244c71f222331921a64ca07eb13cecff SHA256 1d129b6111437029197b5bb5c2cab9ae11ef250640d278aafff16464f689d4f1
+DIST gentoo-apache-2.2.13-r1-20090920.tar.bz2 63767 RMD160 452af532b651c72d4ee265861738869344235cec SHA1 1a052d549005e3e76d6535d5ea09f7af20b3e93e SHA256 48212f91ec6d4a7e5c9f5e78da35ea8e97c9a3faddd8a165bccc5d5658360d32
 DIST httpd-2.2.11.tar.bz2 5230130 RMD160 b2012af716a459f666e0e41eb04808bd0f7fc28d SHA1 7af256d53b79342f82222bd7b86eedbd9ac21d9a SHA256 5ce34825c5b84d1808605a22f8d16d44c6f91882a538bb98a3affed8f5dff6fe
-DIST httpd-2.2.12.tar.bz2 5140433 RMD160 4c8e781e5e60a7a332383a798fe0ddc1adffc914 SHA1 76e243a5b7dc9896e83bdfac1aa98bbfdc85aeae SHA256 b1e95d4f19a8f6cf9c2b9d44f5f109d22d79d3efb3e0a3c8265eebc9f82fc416
 DIST httpd-2.2.13.tar.bz2 5300199 RMD160 4a6a2247cc118175a9a36f1e14344ee71da24627 SHA1 44d85da1b8e6c579d4514cfefbea00b284717b69 SHA256 24a812e010d936a3114141bad56461fcaa1089aa720bd16355feb3516ab8d6d6
-EBUILD apache-2.2.11-r2.ebuild 2807 RMD160 215f28e04fd338f288a975a5812d2c28a4e0de8f SHA1 bef521d3d29ca3ac85cdf53aab541e65da84a847 SHA256 11dd56d51da646f2289db1be6b70879a3435a506e0896f93288b0aea484aed86
-EBUILD apache-2.2.11-r3.ebuild 3038 RMD160 a911d9670a87ebfd92c1503f5949a025587705c7 SHA1 2c28f352e24f326055791debc1962aeeb88e57ae SHA256 63daecfb6ddf18480e33f823167c6df93f49ed504b104f269f3900258241a85b
-EBUILD apache-2.2.12.ebuild 2566 RMD160 aca021d72c8b98f98e9d8d39669a6b01cccc4f12 SHA1 deff8cb44b8d61ecc67ba9cf6be39e991b7b900b SHA256 88c2a139dfa18d97486c42f050e69c9bfdbadbe6bcedc34de7cd35cff4dbc8b0
-EBUILD apache-2.2.13.ebuild 2566 RMD160 a56acf9fd8631292112cb7f973d787677cce0288 SHA1 80b67acbb1412cc24c1804a7be3dcb49fe2a2fcc SHA256 9d99ba8e5948ef5c4b3d12434b3a9abc54cd46ccdfb3cfe323aa424766574405
-MISC ChangeLog 108442 RMD160 27e08263cafb996b009737bcdb58148b5d2c8930 SHA1 6d0ee20c20365df56ba55dde8b78671373f1d489 SHA256 9b077bdef87f00ef1362e7bb8685da0a8bf808a63c1f009f4044e12e28cdc3cd
+EBUILD apache-2.2.11-r2.ebuild 2808 RMD160 7586d1742a982e33d94905d2191b95c50d2dad9e SHA1 c1aaadfcc89b1f76d7585ee053ed9e95614b2d72 SHA256 395f4a58557f9b3fb4fac24f514817e2fcbd17c1df1fcc9f9aa8b76bd31cf6b5
+EBUILD apache-2.2.13-r1.ebuild 2571 RMD160 c9021ba132ea4fcd77e47549b04da35066ffdf7a SHA1 f7f859931b3a0fb03bd9d0f21084ade9f2b7dd31 SHA256 682cfdd949dae344db7b148c506402eb2c3fb615509862143d22100fc78502d6
+EBUILD apache-2.2.13.ebuild 2568 RMD160 c6e1f14874c1649383646e21d4f8ce8fa8b23e79 SHA1 cc5e76c7a9912c8b5151745bf9aa5dc45a7ecaab SHA256 907aa6ebd0cb662cf712590fd5799ed79597c076a817a1f8e7c408fc9af71dac
+MISC ChangeLog 108705 RMD160 03dbfc9d1950fc649168e6b782dc81a65eada165 SHA1 200e9df68b1f6906ff3f0d8b1064687ac94fffdb SHA256 023e22faeee333e74644259e45a3a249a7ac23f18a20c340ace874f3d3f687b0
 MISC metadata.xml 802 RMD160 cef716401b4191c2509fcb6447c7c233d22837ad SHA1 f14bce5f939a169a24bcf524ccbb452406168a72 SHA256 8cdd0bcaad1b9579550d63a4a85025cf57646c6c2f201dc20ea43075ba4627d3
